# vdx-helper-python

./: .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yml  docs.Dockerfile  docs.Jenkinsfile  pyproject.toml  swagger.json  tox.ini
conf/: mypy.ini
docs/source/: conf.py  index.rst  overview.rst  quick_start.rst
docs/source/_static/css/: vdx-theme.css
docs/source/vdx_helper/: domain.rst  errors.rst  mappers.rst  models.rst  util.rst  vdx_helper.rst
tests/: __main__.py  _test_runner.py  client_mock_server_test.py  custom_mappers_mock_tests.py  json_responses.py  test_vdx_helper.py
tests/prism/: docker-compose.yml  swagger.json
vdx_helper/: __init__.py  domain.py  errors.py  mappers.py  models.py  typing.py  util.py  vdx_helper.py
