[tool.poetry]
name = "vdx-helper"
version = "3.2.4"
description = "Python client library to connect to the VDX Core API"
authors = ["Joana Teixeira <joana.teixeira@vizidox.com>", "Tiago Santos <tiago.santos@vizidox.com>",
           "Rita Mariquitos <rita.mariquitos@morphotech.co.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://vizidox.com"
repository = "https://github.com/Morphotech/vdx-helper-python"
documentation = "https://helper.vizidox.com/"
classifiers = ["License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3",
               "Topic :: Software Development :: Libraries :: Python Modules"]


[tool.poetry.dependencies]
python = "^3.7"
requests="^2.27"
nndict="^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
testcontainers = "^3.5"
mypy="^1.2"
sphinx="^5.3.0"
sphinx-rtd-theme="^1.2.0"
tox = "^4.4.11"

types-requests = "^2.28.11.17"

[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.masonry.api"
